--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 1 Orji Onyinyechi <orjionyinyechi080@gmail.com>
-2 
+2 Chinedu Erem <eremchinedu43@gmail.com> 
